<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="5dp"
    tools:context=".activities.customer.CustomerAddActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/biNoteId"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:enabled="false"
                android:hint="@string/callNoteId"
                android:imeOptions="actionNext"
                android:inputType="textNoSuggestions"
                android:maxLines="1"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/biNoteVisitId"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/visitId"
                android:imeOptions="actionNext"
                android:inputType="phone"
                android:maxLines="1"
                android:enabled="false"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:clickable="false"
                app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/biNoteTypeId"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clickable="false"
                    android:enabled="false"
                    android:focusable="false"
                    android:hint="@string/noteTypeId"
                    android:maxLines="1"
                    android:textAppearance="?android:attr/textAppearanceSmall" />
            </android.support.design.widget.TextInputLayout>

            <com.kenmeidearu.searchablespinnerlibrary.SearchableSpinner
                android:id="@+id/listType"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="3"
                android:focusable="true"
                android:imeOptions="actionNext" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/detailVisit"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="bold" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/biNote1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/note1"
                android:imeOptions="actionNext"
                android:inputType="textMultiLine"
                android:maxLines="6"
                android:minLines="3"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/biNote2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/note2"
                android:imeOptions="actionNext"
                android:inputType="textMultiLine"
                android:maxLines="6"
                android:minLines="3"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </android.support.design.widget.TextInputLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:clickable="false"
                app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/biNote3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/note3"
                    android:clickable="false"
                    android:enabled="false"
                    android:maxLines="1"
                    android:focusable="false"
                    android:textAppearance="?android:attr/textAppearanceSmall" />
            </android.support.design.widget.TextInputLayout>

            <com.kenmeidearu.searchablespinnerlibrary.SearchableSpinner
                android:id="@+id/listProduct"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:focusable="true"
                android:imeOptions="actionNext"
                android:layout_weight="3" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>